# sdk

./: Geode.cmake
cmake/: Android.cmake  Codegen.cmake  MacOS.cmake  Win32.cmake  iOS.cmake
codegen/: CMakeLists.txt
codegen/Broma/PEGTL-3.2.7/: CMakeLists.txt
codegen/Broma/include/: broma.hpp
codegen/Broma/src/: attribute.hpp  basic_components.hpp  bind.hpp  broma.cpp  function.hpp  member.hpp  post_process.hpp  preprocessor.hpp  state.hpp  type.hpp
codegen/src/: HeaderGen.cpp  Main.cpp  Shared.hpp  SourceGen.cpp
include/Geode/: Bindings.hpp  Modify.hpp
include/Geode/cocos/cocos2dx/cocoa/: CCObject.h
include/Geode/gui/: BasedButtonSprite.hpp  Popup.hpp  ScrollLayer.hpp
include/Geode/loader/: Loader.hpp  Log.hpp
include/Geode/modify/: Addresses.hpp  Types.hpp
include/Geode/utils/: cocos.hpp
include/gui/: IconButtonSprite.hpp  InputNode.hpp  ListView.hpp  MDTextArea.hpp  MenuInputNode.hpp  SceneManager.hpp  Scrollbar.hpp  TextRenderer.hpp
include/loader/: Event.hpp
